Enforce strict immutability for options collections and fix merging
Make collections (lists, sets, maps) in options classes strictly immutable
by wrapping them in List.copyOf(), Set.copyOf(), Map.copyOf(), and
Collectors.toUnmodifiableMap() instead of instantiating mutable collections.

Update combineWith() logic in options builders to properly merge
collections when overridden, rather than blindly overwriting the base
collections with the override ones. Also optimize builder clone()
methods to take advantage of this immutability.

See #6218
Signed-off-by: Sébastien Deleuze <sdeleuze@users.noreply.github.com>